--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <EditText
+        android:id="@+id/edtsearch"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
